cabal-version:       2.0
name:                findhttp
version:             0.1
synopsis:            List http/html files
description:         Tool for listing files (recursively) in an http directory
homepage:            https://github.com/juhp/findhttp
bug-reports:         https://github.com/juhp/findhttp/issues
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4, GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/juhp/findhttp.git

executable findhttp
  main-is:             Main.hs
  other-modules:       Paths_findhttp

  build-depends:       base,
                       basic-prelude,
                       bytestring,
                       directory,
                       filepath,
                       Glob,
                       http-directory >= 0.1.5,
                       simple-cmd-args,
                       text

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
