cabal-version:       2.0
name:                lshttp
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/juhp/lshttp
bug-reports:         https://github.com/juhp/lshttp/issues
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           2019 Jens Petersen
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.4.4, GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/juhp/lshttp.git

executable lshttp
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude >= 4.11.1.0 && < 4.13
                     
                     , basic-prelude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
